# blowup

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md  README_zh.md  cinema_wiki.json  eslint.config.js  index.html  justfile  package-lock.json  package.json  player.html  splash.html  subtitle-viewer.html  tsconfig.json  vite.config.ts  waveform.html
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
crates/core/: Cargo.toml
crates/core/migrations/: 001_initial.sql  004_knowledge_base_v2.sql
crates/core/src/: context.rs  error.rs  lib.rs
crates/core/src/audio/: mod.rs  service.rs
crates/core/src/config/: mod.rs
crates/core/src/entries/: graph.rs  mod.rs  model.rs  service.rs
crates/core/src/export/: mod.rs  s3.rs  service.rs
crates/core/src/infra/: cache.rs  common.rs  events.rs  ffmpeg.rs  mod.rs  paths.rs
crates/core/src/infra/db/: mod.rs
crates/core/src/media/: mod.rs  service.rs
crates/core/src/subtitle/: alass.rs  mod.rs  parser.rs  service.rs
crates/core/src/tasks/: mod.rs  model.rs  registry.rs  service.rs
crates/core/src/tmdb/: mod.rs  model.rs  service.rs
crates/core/src/torrent/: download.rs  manager.rs  mod.rs  tracker.rs
crates/core/src/torrent/search/: dedup.rs  mod.rs  parser.rs  provider.rs  scorer.rs  types.rs
crates/core/src/torrent/search/providers/: mod.rs  nyaa.rs  onethreeseven.rs  yts.rs
crates/core/src/torrent/search/providers/fixtures/: 1337x_detail.html  1337x_search.html  nyaa_search.xml
crates/core/src/workflows/: download_monitor.rs  mod.rs  wiki_linker.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: client.rs  error.rs  lib.rs  main.rs  service.rs  socket.rs
crates/mcp/tests/: smoke.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  error.rs  lib.rs  main.rs  path_guard.rs  state.rs
crates/server/src/routes/: audio.rs  config.rs  downloads.rs  entries.rs  events.rs  export.rs  health.rs  library.rs  media.rs  mod.rs  search.rs  skill.rs  subtitle.rs  tasks.rs  tmdb.rs  tracker.rs
crates/server/tests/: serve_unix.rs  smoke.rs
crates/server/tests/common/: mod.rs
crates/tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/tauri/capabilities/: default.json
crates/tauri/migrations/: 003_download_refactor.sql
crates/tauri/native/: metal_layer.m  win_gl_layer.c  win_gl_layer.h
crates/tauri/resources/: .gitignore
crates/tauri/resources/skills/blowup-wiki-writer/: SKILL.md
crates/tauri/src/: alass.rs  cache.rs  common.rs  ffmpeg.rs  lib.rs  main.rs  subtitle_parser.rs
crates/tauri/src/commands/: audio.rs  config.rs  download.rs  export.rs  media.rs  mod.rs  s3.rs  search.rs  skill.rs  splash.rs  subtitle.rs  tasks.rs  tracker.rs
crates/tauri/src/commands/tmdb/: credits.rs  enrichment.rs  mod.rs  search.rs
crates/tauri/src/player/: commands.rs  macos.rs  mod.rs  native.rs
crates/tauri/src/player/windows/: controls.rs  fullscreen.rs  mod.rs  video_window.rs
crates/tauri/src/skill_bridge/: mod.rs  state.rs
docs/: REFACTOR.md  blowup-layout-spec.md  product-vision.md
docs/plans/: 2026-02-21-blowup-implementation.md  2026-02-21-blowup-redesign.md  2026-02-21-omdb-info-config-design.md  2026-02-21-omdb-info-config-impl.md
docs/superpowers/plans/: 2026-04-06-blowup-v2-m1-plan.md  2026-04-06-blowup-v2-m2-plan.md  2026-04-06-blowup-v2-m3-plan.md  2026-04-06-blowup-v2-m4-plan.md  2026-04-06-blowup-v2-m5-plan.md  2026-04-06-blowup-v2-m6-plan.md  2026-04-12-windows-player-native-window.md  2026-04-14-skill-bridge-plan.md  2026-04-15-multi-source-torrent-search.md
docs/superpowers/specs/: 2026-04-06-blowup-v2-m1-design.md  2026-04-06-blowup-v2-m2-design.md  2026-04-12-windows-player-native-window-design.md  2026-04-14-skill-bridge-design.md  2026-04-15-multi-source-torrent-search-design.md
pywork/: main.py  pyproject.toml  test_query_condition.py
pywork/apis/: imdb.py
scripts/: import-cinema-wiki.mjs
src/: App.tsx  Player.tsx  SubtitleViewer.tsx  Waveform.tsx  ai.rs  common.rs  config.rs  config_cmd.rs  download.rs  error.rs  index.css  lib.rs  main.rs  main.tsx  omdb.rs  player-main.tsx  search.rs  splash-main.tsx  sub.rs  subtitle-viewer-main.tsx  tmdb.rs  tracker.rs  waveform-main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_downloads.sql  005_downloads_year_genres.sql
src-tauri/native/: metal_layer.h  metal_layer.m  win_gl_layer.c
src-tauri/src/: cache.rs  common.rs  config.rs  error.rs  lib.rs  library_index.rs  subtitle_parser.rs  torrent.rs
src-tauri/src/commands/: _sub_align.rs  _sub_fetch.rs  _sub_shift.rs  audio.rs  config.rs  download.rs  export.rs  media.rs  mod.rs  s3.rs  search.rs  subtitle.rs  tmdb.rs  tracker.rs
src-tauri/src/commands/tmdb/: credits.rs  enrichment.rs  mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/player/: commands.rs  ffi.rs  mod.rs  native.rs
src/components/: FilmDetailPanel.tsx  MusicPlayer.tsx  ReviewSection.tsx  WikiDetailView.tsx  WikiEditor.tsx
src/components/contextpanel/: LibraryDarkroomTab.tsx  LibraryDetailTab.tsx
src/components/ui/: Button.tsx  Chip.tsx  NavItem.tsx  TextInput.tsx
src/layout/: AppLayout.tsx  ContextPanel.tsx  IconSidebar.tsx  SpaceShell.tsx  Toolbar.tsx  constants.ts
src/lib/: format.ts  mantine-overrides.css  mediaExts.ts  mountReactRoot.tsx  space.ts  styles.ts  tauri.ts  theme.ts  useBackendEvent.ts  useGlobalHotkeys.ts
src/pages/: Darkroom.tsx  Download.tsx  Genres.tsx  Graph.tsx  Library.tsx  Media.tsx  People.tsx  Placeholder.tsx  Search.tsx  Settings.tsx  Subtitle.tsx  Wiki.tsx
src/spaces/: DiscoverSpace.tsx  KnowledgeSpace.tsx  LibrarySpace.tsx  SettingsOverlay.tsx
src/splash/: Splash.css  Splash.tsx  SplashRoot.tsx
src/sub/: align.rs  fetch.rs  mod.rs  shift.rs
