[package]
name = "blowup"
version = "1.0.0"
edition = "2024"
authors = ["mouselee"]
rust-version = "1.88"
description = "All tools related to improving my movie-watching experience."
readme = "README.md"
repository = "https://github.com/XuanLee-HEALER/blowup"
license = "MIT"
keywords = ["tracker", "srt", "movie", "torrent", "film"]
categories = ["command-line-utilities"]
exclude = ["*.srt"]

[dependencies]
octocrab = "0.44.1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["io-std", "process", "fs", "macros", "rt-multi-thread"] }
thiserror = "2.0.12"
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
regex = "1.11.1"
shellexpand = "3.1.1"
which = "8.0.0"
walkdir = "2.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"
dirs = "5"
anyhow = "1"
flate2 = "1"
chromiumoxide = { version = "0.7", optional = true }

[features]
cdp = ["chromiumoxide"]

[dev-dependencies]
tempfile = "3.20.0"
diff = "0.1.13"
