[package]
name = "blowup"
version = "2.0.0"
edition = "2024"

[lib]
name = "blowup_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri          = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"

# Retained from v1
reqwest        = { version = "0.12", features = ["json"] }
tokio          = { version = "1", features = ["full"] }
thiserror      = "2"
chrono         = "0.4"
regex          = "1"
shellexpand    = "3"
which          = "8"
walkdir        = "2"
toml           = "0.8"
toml_edit      = "0.22"
dirs           = "5"
anyhow         = "1"
flate2         = "1"
octocrab       = "0.44"

# New for v2
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls", "migrate"] }
