[package]
name = "blowup-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "blowup_core"

[dependencies]
thiserror             = "2"
reqwest               = { version = "0.12", features = ["json"] }
toml                  = "0.8"
tokio                 = { version = "1", features = ["full"] }
walkdir               = "2"
which                 = "8"
unicode-normalization = "0.1"

[dev-dependencies]
tempfile = "3"
