[package]
name = "blowup-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "blowup_core"

[dependencies]
thiserror             = "2"
reqwest               = { version = "0.12", features = ["json"] }
toml                  = "0.8"
tokio                 = { version = "1", features = ["full"] }
walkdir               = "2"
which                 = "8"
unicode-normalization = "0.1"
serde                 = { version = "1", features = ["derive"] }
serde_json            = "1"
chrono                = "0.4"
tracing               = "0.1"
dirs                  = "5"
shellexpand           = "3"
sqlx                  = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls", "migrate", "derive"] }
regex                 = "1"
sha2                  = "0.10"
hex                   = "0.4"
alass-core            = "2.0"
webrtc-vad            = "0.4"
byteorder             = "1"
librqbit              = "8.1"
url                   = "2"

[dev-dependencies]
tempfile    = "3"
serial_test = "3"
