[package]
name = "blowup-mcp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "blowup-mcp"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync"] }
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
hyperlocal = "0.9"
http-body-util = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rmcp = { version = "1.4", features = ["server", "macros", "transport-io", "schemars"] }
schemars = "1"
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
axum = "0.8"
