[package]
name = "blowup-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "blowup-server"
path = "src/main.rs"

[lib]
name = "blowup_server"
path = "src/lib.rs"

[dependencies]
blowup-core  = { path = "../core" }
axum         = "0.8"
tokio        = { version = "1", features = ["full"] }
tower        = "0.5"
tower-http   = { version = "0.6", features = ["trace"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx         = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls"] }
reqwest      = { version = "0.12", features = ["json"] }
dirs         = "5"
shellexpand  = "3"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
getrandom    = "0.2"

[dev-dependencies]
tempfile     = "3"
serial_test  = "3"
http-body-util = "0.1"
